--- a/frontend/motsi/src/pages/styles/PerfilTurista.css
+++ b/frontend/motsi/src/pages/styles/PerfilTurista.css
@@ -1,3 +1,4 @@
+
 .perfil__section {
     display: flex;
     flex-wrap: wrap;
@@ -7,12 +8,15 @@
   }
 
   .perfil__sectionHead {
+    padding-top: 0px;
     padding: 15px;
     justify-content: center;    
     display: flex;
-    background-color: rgba(0, 0, 0, 0.897);
-    color: white;
-    width: 100%;
+    color: black;
+    background-color: #d1dbc1;
+    width: 50%;
+    margin: 5vw;
+    border-radius: 30px;
   }
 
 .perfil__menu {
